--- a/Frontend/pages/rewards.html
+++ b/Frontend/pages/rewards.html
@@ -94,8 +94,8 @@
 
         <div class="mt-4 px-6 lg:px-0 lg:w-1/2 lg:mx-auto">
             <div class="flex items-center gap-x-16">
-                <a href="home.html" class="text-primary flex items-center"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="currentColor"><path d="M560-240 320-480l240-240 56 56-184 184 184 184-56 56Z"/></svg>Back</a>
-                <div class="ml-auto w-full">
+                <a href="home.html" class="text-primary flex items-center hover:underline"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="currentColor"><path d="M560-240 320-480l240-240 56 56-184 184 184 184-56 56Z"/></svg>Back</a>
+                <div class="ml-auto w-full lg:!w-1/2">
                     <div class="flex items-center w-full">
                         <h4 class="font-semibold currentLevel text-sm shrink-0">Level ...</h4>   
                         <p class="text-[10px] ml-auto"><span class="fullLevelText"><span class="font-medium pointsRemainingToNextLevel">...</span> points until <span class="nextLevel">Level ...</span></span></p>
@@ -143,7 +143,7 @@
         </div>
         
         <div id="dialog" class="w-full lg:!w-1/3 lg:left-1/2 lg:transform lg:-translate-x-1/2 py-4 fixed bg-white border-gray-400 top-1/3 z-20 hidden">
-            <svg onclick="hideDialog()" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="currentColor" class="absolute right-2 top-2 text-gray-600"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg>
+            <svg onclick="hideDialog()" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="currentColor" class="absolute right-2 top-2 text-gray-600 cursor-pointer"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg>
             <div class="flex items-center border-b border-primary px-4 pb-2">
                 <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#00A4D3"><path d="m668-380 152-130 120 10-176 153 52 227-102-62-46-198Zm-94-292-42-98 46-110 92 217-96-9ZM294-287l126-76 126 77-33-144 111-96-146-13-58-136-58 135-146 13 111 97-33 143ZM173-120l65-281L20-590l288-25 112-265 112 265 288 25-218 189 65 281-247-149-247 149Zm247-340Z"/></svg>
                 <div class="px-2">
