--- a/Frontend/pages/transactionPage.html
+++ b/Frontend/pages/transactionPage.html
@@ -138,7 +138,7 @@
             </div>
 
             <button id="backToHomeBtn"
-                class="btn bg-primary text-white rounded-md !py-1.5 w-full flex gap-x-1.5 items-center justify-center mt-1 lg:w-1/4 lg:mx-auto lg:mt-20">
+                class="btn btn-primary text-white rounded-md !py-1.5 w-full flex gap-x-1.5 items-center justify-center mt-1 lg:w-1/4 lg:mx-auto lg:mt-20">
                 Back To Home
             </button>
         </div>
