--- a/Frontend/pages/individualTransaction.html
+++ b/Frontend/pages/individualTransaction.html
@@ -203,7 +203,7 @@
 
                                     <div>
                                         <button id="backToTransactionBtn"
-                                            class="btn bg-primary text-white rounded-md !py-1.5 w-full flex gap-x-1.5 items-center justify-center mt-1 lg:mt-8 lg:mb-4">
+                                            class="btn btn-primary text-white rounded-md !py-1.5 w-full flex gap-x-1.5 items-center justify-center mt-1 lg:mt-8 lg:mb-4">
                                             Back To All Transactions
                                         </button>
                                     </div>
