--- a/Frontend/pages/sendmoney.html
+++ b/Frontend/pages/sendmoney.html
@@ -175,7 +175,7 @@
                 </svg></button>
         </div>    
             <div class="flex justify-right items-center lg:mt-8">
-                <button onclick="window.location.href='home.html'" class="btn mx-auto text-white bg-[#00a4d3] hover:bg-blue-800 !py-1.5 w-60 h-9 flex items-center justify-center mt-4 mb-4 rounded-lg"> 
+                <button onclick="window.location.href='home.html'" class="btn mx-auto text-white btn-primary !py-1.5 w-60 h-9 flex items-center justify-center mt-4 mb-4 rounded-lg"> 
                     <span class="material-symbols-outlined">home</span>
                     Back to Home
                 </button>
