tab titles and icon

--- a/Frontend/pages/greenlevel.html
+++ b/Frontend/pages/greenlevel.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="../style.css">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>EcoBank | Your Green Level</title>
+    <title>Eco-Bank | Your Green Level</title>
+    <link rel="icon" type="image/x-icon" href="../logo.png">
     <style>
         .loader {
             text-align: center;
