--- a/Frontend/pages/home.html
+++ b/Frontend/pages/home.html
@@ -18,7 +18,8 @@
             }
         }
     </script>
-    <title></title>
+    <title>Eco-Bank | Home</title>
+    <link rel="icon" type="image/x-icon" href="../logo.png">
     <style>
         .loader {
             text-align: center;
