--- a/Frontend/pages/register.html
+++ b/Frontend/pages/register.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" href="../style.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <script type="module" src="../register.js"></script>
-    <title>Register</title>
+    <title>Eco-Bank | Register</title>
+    <link rel="icon" type="image/x-icon" href="../logo.png">
     <style>
         #fullModal {
             display: "none";
