--- a/Frontend/pages/individualTransaction.html
+++ b/Frontend/pages/individualTransaction.html
@@ -9,7 +9,8 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="../style.css">
     <script src="https://cdn.tailwindcss.com"></script>
-    <title></title>
+    <title>Eco-Bank | Transaction Details</title>
+    <link rel="icon" type="image/x-icon" href="../logo.png">
     <style>
         .containerForTransactionList {
             max-width: 850px;
