--- a/Frontend/pages/login.html
+++ b/Frontend/pages/login.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="../style.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <script type="module" src="../login.js"></script>
-    <title>Login</title>
+    <title>Eco-Bank | Login</title>
+    <link rel="icon" type="image/x-icon" href="../logo.png">
 </head>
 
 <body class="flex flex-col items-center justify-center min-h-screen bg-gray-100 pt-20">
