--- a/Frontend/pages/rewards.html
+++ b/Frontend/pages/rewards.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="../style.css">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
-    <title></title>
+    <title>Eco-Bank | Rewards</title>
+    <link rel="icon" type="image/x-icon" href="../logo.png">
     <style>
         .loader {
             text-align: center;
