--- a/Frontend/pages/sendmoney.html
+++ b/Frontend/pages/sendmoney.html
@@ -11,7 +11,8 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script type="module" src="../sendMoney.js"></script>
-    <title>Send Money</title>
+    <title>Eco-Bank | Send Money</title>
+    <link rel="icon" type="image/x-icon" href="../logo.png">
     <style>
         .loader {
             text-align: center;
