--- a/Frontend/pages/individualTransaction.html
+++ b/Frontend/pages/individualTransaction.html
@@ -43,7 +43,7 @@
         }
 
         .sectionforDetails {
-            max-height: 250px;
+            max-height: 300px;
             border: 1px solid #e1e5e7;
             border-radius: 0.375rem;
             padding: 0.5rem;
@@ -187,6 +187,7 @@
                                     </div>
                                     <p class="mt-3"> Overall, this company uses business practices that results in ...
                                         to the environment.</p>
+                                    <p class="text-xs mt-2 mb-2">*RAG Ratings: a score of 0-0.29 is very harmful, 0.3-0.69 is harmful, and 0.7 or above is environmentally friendly </p>
                                 </div>
 
                                 <div class="-mt-7 shadow-lg rounded-bl-lg rounded-br-lg">
