--- a/Frontend/pages/home.html
+++ b/Frontend/pages/home.html
@@ -20,6 +20,22 @@
     </script>
     <title></title>
     <style>
+        @keyframes slide-down {
+            0% {
+                transform: translateY(-100%);
+                opacity: 0;
+            }
+            100% {
+                transform: translateY(0);
+                opacity: 1;
+            }
+        }
+
+        .animate-slide-down {
+            animation: slide-down 0.5s ease-in-out;
+        }
+    
+
         .loader {
             text-align: center;
         }
