--- a/Frontend/pages/home.html
+++ b/Frontend/pages/home.html
@@ -14,6 +14,7 @@
         function confirmLogout(event) {
             event.preventDefault();
             if (confirm("Are you sure you want to log out?")) {
+                localStorage.clear();
                 window.location.href = "login.html";
             }
         }
