--- a/Frontend/pages/rewards.html
+++ b/Frontend/pages/rewards.html
@@ -1,4 +1,4 @@
-<html></html>
+<html>
 
 <head>
     <meta charset="UTF-8">
@@ -143,7 +143,7 @@
             </div>
         </div>
         
-        <div id="dialog" class="w-full lg:!w-1/3 lg:left-1/2 lg:transform lg:-translate-x-1/2 py-4 fixed bg-white border-gray-400 top-1/3 z-20 hidden">
+        <div id="dialog" class="w-full lg:!w-1/3 lg:left-1/2 lg:transform lg:-translate-x-1/2 py-4 fixed bg-white border-gray-400 top-1/3 z-20 hidden" data-rewardType="">
             <svg onclick="hideDialog()" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="currentColor" class="absolute right-2 top-2 text-gray-600 cursor-pointer"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg>
             <div class="flex items-center border-b border-primary px-4 pb-2">
                 <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#00A4D3"><path d="m668-380 152-130 120 10-176 153 52 227-102-62-46-198Zm-94-292-42-98 46-110 92 217-96-9ZM294-287l126-76 126 77-33-144 111-96-146-13-58-136-58 135-146 13 111 97-33 143ZM173-120l65-281L20-590l288-25 112-265 112 265 288 25-218 189 65 281-247-149-247 149Zm247-340Z"/></svg>
@@ -151,15 +151,26 @@
                     <h4 id="rewardNameBox" class="text-primary font-semibold">Reward Name</h4>
                 </div>
             </div>
-            <div class="text-center mt-4">
+            <div id="redeem" class="text-center mt-4">
                 <p class="text-sm">This reward costs <span id="rewardPointsBox" class="font-semibold">50</span> points</p>
-                <button class="btn btn-primary rounded-lg mt-4">Redeem</button>
+                <button id="redeemButton" onclick="redeemReward()" class="btn btn-primary rounded-lg mt-4">Redeem</button>
+            </div>
+
+            <div id="redeemed_text" class="text-center mt-8 w-max lg:w-1/2 lg:mx-auto hidden">
+                <h4 class="text-primary font-semibold text-lg">Reward redeemed!</h4>
+                <p class="mt-8 hover:underline cursor-pointer text-primary text-sm" onclick="hideDialog()">Return</p>
+            </div>
+
+            <div id="rewardAlreadyRedeemed" class="text-center mt-8 w-max lg:w-1/2 lg:mx-auto hidden">
+                <h4 class="text-primary font-semibold text-lg">You already have a redeemed reward!</h4>
+                <p class="mt-8 hover:underline cursor-pointer text-primary text-sm" onclick="hideDialog()">Return</p>
             </div>
         </div>
 
 <!--     <script type="module" src="../functions.js"></script> -->
      <script>
         //press the button and shows the dialog
+        
         function showDialog(rewardName, points)
         {
             const dialog = document.getElementById('dialog');
@@ -169,9 +180,33 @@
 
             const rewardNameBox = document.getElementById('rewardNameBox');
             const rewardPointsBox = document.getElementById('rewardPointsBox');
+            const currentGreenScore = document.getElementsByClassName('greenScore');
+            const redeemButton = document.getElementById('redeemButton');
+            const rewardAlreadyRedeemed = document.getElementById('rewardAlreadyRedeemed');
 
             rewardNameBox.innerHTML = rewardName;
             rewardPointsBox.innerHTML = points;
+            if (rewardName.includes('%')){
+                dialog.dataset.rewardType = 'Percentage';
+            } else if (rewardName.includes('£')){
+                dialog.dataset.rewardType = 'Cash';
+            }
+
+            console.log(parseInt(points));
+            console.log(parseInt(currentGreenScore[0].innerHTML));
+            if (parseInt(points) > parseInt(currentGreenScore[0].innerHTML)){
+                redeemButton.disabled = true;
+                console.log('Disabling button');
+            } else {
+                redeemButton.disabled = false;
+            }
+
+            let reward = JSON.parse(localStorage.getItem('reward'));
+
+            if (reward && reward.redeemed){
+                redeem.classList.add('hidden');
+                rewardAlreadyRedeemed.classList.remove('hidden');
+            }
         }
 
         function hideDialog(){
@@ -204,6 +239,28 @@
                 leaderboard.classList.remove('hidden');
                 rewards.classList.add('hidden');
             }
+        }
+
+        function redeemReward(){
+            var pointsCost = parseInt(document.getElementById('rewardPointsBox').innerHTML);
+            var rewardName = document.getElementById('rewardNameBox').innerHTML;
+            var rewardType = document.getElementById('dialog').dataset.rewardType;
+            let redeem = document.getElementById('redeem');
+            let redeemed_text = document.getElementById('redeemed_text');
+            let redeem_error = document.getElementById('redeem_error');
+
+            localStorage.setItem('reward', JSON.stringify({
+                name: rewardName,
+                type: rewardType,
+                redeemed: true
+            }))
+
+            redeem.classList.add('hidden');
+            redeemed_text.classList.remove('hidden');
+
+
+
+            console.log(localStorage);
         }
      </script>
 
