--- a/Frontend/pages/sendmoney.html
+++ b/Frontend/pages/sendmoney.html
@@ -130,12 +130,10 @@
                     Try Again</button>
                 </dialog>
 
-
                 <h2 class="font-semibold text-2xl flex items-center gap-x-1.5">
                 <svg xmlns="http://www.w3.org/2000/svg" 
                         height="24px"  fill="#2897CF" width="24px" stroke="#FFFFFF" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"> 
                         <path d="M2.5 2v6h6M21.5 22v-6h-6"/><path d="M22 11.5A10 10 0 0 0 3.2 7.2M2 12.5a10 10 0 0 0 18.8 4.2"/>
-                    
                 </svg>Send Money</h2>
             </div>
             <p class="text-center text-lg mt-4">Welcome back, <span class="font-bold accountName">...</span></p>
@@ -170,6 +168,10 @@
                 </div>
             </form>
 
+            <div id="discountBox" class="border border-primary p-4 text-center mb-4 rounded hidden">
+                <h4 class="text-sm">You have a <span id="discountAmount" class="font-medium"></span> discount on this purchase!</h4>
+            </div>
+
             <button id="sendButton" class="btn btn-primary rounded-bl-lg rounded-br-lg !py-1.5 w-full flex gap-x-1.5 items-center justify-center">Send
                 Money<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed">
                     <path d="M560-440q-50 0-85-35t-35-85q0-50 35-85t85-35q50 0 85 35t35 85q0 50-35 85t-85 35ZM280-320q-33 0-56.5-23.5T200-400v-320q0-33 23.5-56.5T280-800h560q33 0 56.5 23.5T920-720v320q0 33-23.5 56.5T840-320H280Zm80-80h400q0-33 23.5-56.5T840-480v-160q-33 0-56.5-23.5T760-720H360q0 33-23.5 56.5T280-640v160q33 0 56.5 23.5T360-400Zm440 240H120q-33 0-56.5-23.5T40-240v-440h80v440h680v80ZM280-400v-320 320Z"></path>
@@ -183,6 +185,26 @@
             </div>
 
 </body>
+
+<script>
+    if (localStorage.reward){
+        console.log(localStorage.reward);
+        let reward = JSON.parse(localStorage.getItem('reward'));
+        let discountBox = document.getElementById('discountBox');
+        let discountText = document.getElementById('discountAmount')
+        if (localStorage.reward){
+            discountBox.classList.remove('hidden');
+
+            if (reward.type == 'Percentage'){
+                discount = reward.name.substring(0, reward.name.indexOf('%') + 1).trim();
+            } else if (reward.type == 'Cash'){
+                discount = reward.name.split(' ')[0];
+            }
+
+            discountText.innerHTML = discount;
+        }
+    }
+</script>
 
 <footer>
 
