--- a/Frontend/pages/admin.html
+++ b/Frontend/pages/admin.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="../style.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <script type="module" src="../login.js"></script>
+    <script type="module" src="../admin.js"></script>
+    
     <title>Eco-Bank | Login</title>
     <link rel="icon" type="image/x-icon" href="../logo.png">
 </head>
