reload page when user redeems reward

--- a/Frontend/pages/rewards.html
+++ b/Frontend/pages/rewards.html
@@ -270,6 +270,8 @@
                     userObject = data;
                     resolve(userObject);
                 })
+
+                location.reload();
             })
         }
      </script>
