--- a/Frontend/pages/sendmoney.html
+++ b/Frontend/pages/sendmoney.html
@@ -92,8 +92,8 @@
             <div class="container flex items-center lg:w-1/2 lg:mx-auto">
                 <h2 class="font-semibold text-2xl flex items-center gap-x-1.5">
     <!-- Popup that appears when the transaction has been successful. -->
-                <dialog id="sentMoneySuccessful">
-                    <div class="bg-[#EBEBEB] text-center py-1 rounded-tl-lg rounded-tr-lg lg:w-1/3 lg:rounded-md">
+                <dialog id="sentMoneySuccessful" class=" lg:w-1/3 lg:rounded-md">
+                    <div class="bg-[#EBEBEB] text-center py-1 rounded-tl-lg rounded-tr-lg">
                         <h4 class="font-semibold text-lg">Payment Successful!</h4>
                     </div>
                     <br>
@@ -111,8 +111,8 @@
                 </dialog>
 
     <!-- Popup for when the transaction hasn't been successful (the recipient wasn't found) -->
-                <dialog id="wrongRecipient">
-                    <div class="bg-[#EBEBEB] text-center py-1 rounded-tl-lg rounded-tr-lg lg:w-1/3 lg:rounded-md">
+                <dialog id="wrongRecipient" class=" lg:w-1/3 lg:rounded-md">
+                    <div class="bg-[#EBEBEB] text-center py-1 rounded-tl-lg rounded-tr-lg">
                         <h4 class="font-semibold text-lg"><span id="popupErrorMessage">...</span></h4>
                     </div>
                     <br>
