--- a/Frontend/pages/home.html
+++ b/Frontend/pages/home.html
@@ -27,6 +27,7 @@
                 transform: translateY(-100%);
                 opacity: 0;
             }
+
             100% {
                 transform: translateY(0);
                 opacity: 1;
@@ -36,7 +37,7 @@
         .animate-slide-down {
             animation: slide-down 0.5s ease-in-out;
         }
-    
+
 
         .loader {
             text-align: center;
@@ -91,6 +92,44 @@
             animation-delay: 0.5s;
             background-color: #F0F8FF;
         }
+
+        .animated {
+            background-repeat: no-repeat;
+            background-position: left top;
+            -webkit-animation-duration: 5s;
+            animation-duration: 5s;
+            -webkit-animation-fill-mode: both;
+            animation-fill-mode: both;
+        }
+
+        @-webkit-keyframes fadeOutUp {
+            0% {
+                opacity: 1;
+                -webkit-transform: translateY(0);
+            }
+
+            100% {
+                opacity: 0;
+                -webkit-transform: translateY(-20px);
+            }
+        }
+
+        @keyframes fadeOutUp {
+            0% {
+                opacity: 1;
+                transform: translateY(0);
+            }
+
+            100% {
+                opacity: 0;
+                transform: translateY(-20px);
+            }
+        }
+
+        .fadeOutUp {
+            -webkit-animation-name: fadeOutUp;
+            animation-name: fadeOutUp;
+        }
     </style>
 </head>
 
@@ -123,11 +162,12 @@
 
         <div class="mx-8 -mt-20 shadow-lg rounded-bl-lg rounded-br-lg lg:mx-auto lg:w-1/4">
             <a href="sendmoney.html"
-                class="btn btn-dark rounded-tl-lg rounded-tr-lg !py-1.5 w-full flex gap-x-1.5 items-center justify-center"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
-                fill="#e8eaed">
-                <path
-                    d="M560-440q-50 0-85-35t-35-85q0-50 35-85t85-35q50 0 85 35t35 85q0 50-35 85t-85 35ZM280-320q-33 0-56.5-23.5T200-400v-320q0-33 23.5-56.5T280-800h560q33 0 56.5 23.5T920-720v320q0 33-23.5 56.5T840-320H280Zm80-80h400q0-33 23.5-56.5T840-480v-160q-33 0-56.5-23.5T760-720H360q0 33-23.5 56.5T280-640v160q33 0 56.5 23.5T360-400Zm440 240H120q-33 0-56.5-23.5T40-240v-440h80v440h680v80ZM280-400v-320 320Z" />
-            </svg>Send
+                class="btn btn-dark rounded-tl-lg rounded-tr-lg !py-1.5 w-full flex gap-x-1.5 items-center justify-center"><svg
+                    xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
+                    fill="#e8eaed">
+                    <path
+                        d="M560-440q-50 0-85-35t-35-85q0-50 35-85t85-35q50 0 85 35t35 85q0 50-35 85t-85 35ZM280-320q-33 0-56.5-23.5T200-400v-320q0-33 23.5-56.5T280-800h560q33 0 56.5 23.5T920-720v320q0 33-23.5 56.5T840-320H280Zm80-80h400q0-33 23.5-56.5T840-480v-160q-33 0-56.5-23.5T760-720H360q0 33-23.5 56.5T280-640v160q33 0 56.5 23.5T360-400Zm440 240H120q-33 0-56.5-23.5T40-240v-440h80v440h680v80ZM280-400v-320 320Z" />
+                </svg>Send
                 Money</a>
 
             <div class="py-4 bg-white rounded-bl-lg rounded-br-lg">
@@ -138,10 +178,12 @@
             </div>
         </div>
 
-        <div class="mt-8 bg-white border-t border-b border-primary px-8 py-6 lg:border-l lg:border-r lg:w-1/3 lg:mx-auto lg:shadow-lg lg:rounded">
+        <div
+            class="mt-8 bg-white border-t border-b border-primary px-8 py-6 lg:border-l lg:border-r lg:w-1/3 lg:mx-auto lg:shadow-lg lg:rounded">
             <div class="flex items-center">
                 <h2 class="font-semibold text-lg">Latest Transactions</h2>
-                <a href="transactionPage.html" class="text-primary font-medium ml-auto btn btn-primary rounded-lg">See All</a>
+                <a href="transactionPage.html" class="text-primary font-medium ml-auto btn btn-primary rounded-lg">See
+                    All</a>
             </div>
             <div id="latestTransactions"></div>
         </div>
@@ -150,7 +192,9 @@
             <div class="mx-4">
                 <div class="grid grid-cols-2 text-sm">
                     <h5 class="font-medium">Green Level</h5>
-                    <h5 class="ml-auto text-xs"><span class="fullLevelText"><span class="font-medium pointsRemainingToNextLevel">...</span> points until <span class="nextLevel">Level ...</span></span></h5>
+                    <h5 class="ml-auto text-xs"><span class="fullLevelText"><span
+                                class="font-medium pointsRemainingToNextLevel">...</span> points until <span
+                                class="nextLevel">Level ...</span></span></h5>
                 </div>
             </div>
 
@@ -161,23 +205,53 @@
                 </div>
             </div>
 
-            <button href=""
-            class="btn btn-green rounded-bl-lg rounded-br-lg !py-1.5 w-full flex gap-x-1.5 items-center justify-center mt-1"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960"
-            width="24px" fill="#e8eaed">
-            <path d="m140-220-60-60 300-300 160 160 284-320 56 56-340 384-160-160-240 240Z" />
-        </svg>View Level Progress</button>
+            <div class="text-sm mx-4 my-2 flex justify-center">
+                <div class="emptyStreak">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor" class="size-6">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M15.362 5.214A8.252 8.252 0 0 1 12 21 8.25 8.25 0 0 1 6.038 7.047 8.287 8.287 0 0 0 9 9.601a8.983 8.983 0 0 1 3.361-6.867 8.21 8.21 0 0 0 3 2.48Z" />
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M12 18a3.75 3.75 0 0 0 .495-7.468 5.99 5.99 0 0 0-1.925 3.547 5.975 5.975 0 0 1-2.133-1.001A3.75 3.75 0 0 0 12 18Z" />
+                    </svg>
+                </div>
+                <!-- <div class="fullStreak" visibility="hidden">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6">
+                        <path fill-rule="evenodd"
+                            d="M12.963 2.286a.75.75 0 0 0-1.071-.136 9.742 9.742 0 0 0-3.539 6.176 7.547 7.547 0 0 1-1.705-1.715.75.75 0 0 0-1.152-.082A9 9 0 1 0 15.68 4.534a7.46 7.46 0 0 1-2.717-2.248ZM15.75 14.25a3.75 3.75 0 1 1-7.313-1.172c.628.465 1.35.81 2.133 1a5.99 5.99 0 0 1 1.925-3.546 3.75 3.75 0 0 1 3.255 3.718Z"
+                            clip-rule="evenodd" />
+                    </svg>
+                </div> -->
+                <p class="mx-1">Current streak:
+                    <div class="streak">0</div> <div class="streakUpdate"></div>
+                </p>
+            </div>
+
+            <a href="greenlevel.html"
+                class="btn btn-green rounded-bl-lg rounded-br-lg !py-1.5 w-full flex gap-x-1.5 items-center justify-center mt-1"><svg
+                    xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
+                    fill="#e8eaed">
+                    <path d="m140-220-60-60 300-300 160 160 284-320 56 56-340 384-160-160-240 240Z" />
+                </svg>Streak and Level Information</a>
         </div>
 
         <div class="mt-8 mx-8 bg-white shadow-lg pt-3 rounded-lg lg:w-1/3 lg:mx-auto">
             <div class="">
                 <h2 class="font-medium text-center text-sm">Use your green score to redeem rewards!</h2>
-                <a href="rewards.html" class="btn btn-primary rounded-bl-lg rounded-br-lg flex justify-center items-center gap-x-0.5 mt-2"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="m668-380 152-130 120 10-176 153 52 227-102-62-46-198Zm-94-292-42-98 46-110 92 217-96-9ZM294-287l126-76 126 77-33-144 111-96-146-13-58-136-58 135-146 13 111 97-33 143ZM173-120l65-281L20-590l288-25 112-265 112 265 288 25-218 189 65 281-247-149-247 149Zm247-340Z"/></svg>View Rewards & Leaderboard</a>
+                <a href="rewards.html"
+                    class="btn btn-primary rounded-bl-lg rounded-br-lg flex justify-center items-center gap-x-0.5 mt-2"><svg
+                        xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
+                        fill="#e8eaed">
+                        <path
+                            d="m668-380 152-130 120 10-176 153 52 227-102-62-46-198Zm-94-292-42-98 46-110 92 217-96-9ZM294-287l126-76 126 77-33-144 111-96-146-13-58-136-58 135-146 13 111 97-33 143ZM173-120l65-281L20-590l288-25 112-265 112 265 288 25-218 189 65 281-247-149-247 149Zm247-340Z" />
+                    </svg>View Rewards & Leaderboard</a>
             </div>
         </div>
 
         <div class="w-full lg:w-[20%] lg:mx-auto lg:mb-8 lg:rounded-lg bg-primary text-white py-4 mt-8 lg:mt-20">
-            <div class="container mx-auto flex justify-center">   
-                <button onclick="confirmLogout(event)" class="btn bg-red-600 hover:bg-red-800 !py-1.5 w-32 h-8 flex items-center justify-center mt-1"> 
+            <div class="container mx-auto flex justify-center">
+                <button onclick="confirmLogout(event)"
+                    class="btn bg-red-600 hover:bg-red-800 !py-1.5 w-32 h-8 flex items-center justify-center mt-1">
                     <span class="material-symbols-outlined">logout</span>
                     Log out
                 </button>
